syntax = "proto3";

package zio.entity.runtime.k8dns;

message InternalMessage {
    bytes ip = 1;
    int32 port = 2;
    string key = 3;
    string entityType = 4;
    string correlationId = 5;
    bytes payload = 6;
    int64 createdAt = 7;
}

message StreamingInternalMessage {
    bytes ip = 1;
    int32 port = 2;
    string key = 3;
    string entityType = 4;
    string correlationId = 5;
    bool response = 6;
    bytes payload = 7;
    int64 createdAt = 8;
}



service ProtoStreamer {
    rpc SendMessage(InternalMessage) returns (InternalMessage);
}


service BidiProtoStreamer {
    rpc Channels(stream StreamingInternalMessage) returns (stream StreamingInternalMessage);
}